<resources>
    <string name="app_name">LoginFormKotlin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>

    <string name="usernameOrEmail">Username/Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account?SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ask_login">Already have account?Login</string>
</resources>
